Adjustedbuttons design on mobile design to ensure consistency

--- a/src/components/blog-components/blog-section/BlogSection.css
+++ b/src/components/blog-components/blog-section/BlogSection.css
@@ -63,6 +63,12 @@
     font-size: 1.8rem;
   }
 
+  .line1,
+  .line2 {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .topic-buttons {
     gap: 1.2rem;
     text-align: center;
@@ -74,7 +80,9 @@
   .topic {
     font-size: 1rem;
     padding: 1rem;
-    width: 100%;
+    width: 120%;
     max-width: 19rem;
   }
 }
+
+
